[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/Start.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/StartClick.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/StartHover.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MenuOpts.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Menu/Credits.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/CreditsClick.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/CreditsHover.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Environment/Tree01.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Environment/Vegetation01.png" type="Texture" id=11]
[ext_resource path="res://Sprites/logo.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Environment/Tree03.png" type="Texture" id=13]
[ext_resource path="res://Sprites/light.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Environment/Vine01.png" type="Texture" id=15]
[ext_resource path="res://Audio/The Outer Forest.wav" type="AudioStream" id=16]

[node name="Title" type="Node2D"]

script = ExtResource( 1 )

[node name="MenuBackground" type="Sprite" parent="." index="0"]

position = Vector2( 964.378, 541.243 )
texture = ExtResource( 2 )

[node name="StartGame" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 259.0
margin_top = 532.0
margin_right = 447.0
margin_bottom = 626.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="MenuOpts" parent="." index="2" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 264.491, 643.99 )
scale = Vector2( 0.90427, 0.90427 )

[node name="Credits" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 842.0
margin_right = 459.0
margin_bottom = 906.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
_sections_unfolded = [ "Textures" ]

[node name="Tree01" type="Sprite" parent="." index="4"]

position = Vector2( 1679.61, 477.285 )
scale = Vector2( 0.339368, 0.339368 )
texture = ExtResource( 10 )

[node name="Tree02" type="Sprite" parent="." index="5"]

position = Vector2( 889.396, 493.94 )
scale = Vector2( 0.339368, 0.339368 )
texture = ExtResource( 10 )

[node name="Vegetation01" type="Sprite" parent="." index="6"]

position = Vector2( 1571.9, 670.226 )
scale = Vector2( 0.827613, 0.827613 )
texture = ExtResource( 11 )

[node name="Vegetation02" type="Sprite" parent="." index="7"]

position = Vector2( 990.25, 667.953 )
scale = Vector2( 0.827613, 0.827613 )
texture = ExtResource( 11 )

[node name="logo" type="Sprite" parent="." index="8"]

position = Vector2( 361.276, 250.128 )
scale = Vector2( 0.2167, 0.2167 )
texture = ExtResource( 12 )

[node name="Tree03" type="Sprite" parent="." index="9"]

position = Vector2( 1131.71, 539.357 )
texture = ExtResource( 13 )

[node name="Light2D" type="Light2D" parent="." index="10"]

position = Vector2( 1362.21, 667.989 )
enabled = true
editor_only = false
texture = ExtResource( 14 )
offset = Vector2( 0, 0 )
texture_scale = 1.58
color = Color( 0.141479, 0.743873, 0.953125, 1 )
energy = 3.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="Vine01" type="Sprite" parent="." index="11"]

position = Vector2( 635.429, 212.615 )
scale = Vector2( 0.26139, 0.26139 )
texture = ExtResource( 15 )

[node name="MainMenuTheme" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="button_down" from="StartGame" to="." method="_on_StartGame_button_down"]

[connection signal="button_down" from="MenuOpts/Quit" to="." method="_on_Quit_button_down"]

[connection signal="button_down" from="Credits" to="." method="_on_Credits_button_down"]


[editable path="MenuOpts"]
