[gd_scene load_steps=19 format=2]

[ext_resource path="res://Vail_2.0/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Vail_2.0/Sprites/Environment/background.png" type="Texture" id=2]
[ext_resource path="res://Vail_1.0/Scenes/MenuOpts.tscn" type="PackedScene" id=6]
[ext_resource path="res://Vail_1.0/Sprites/Environment/GateFrame.png" type="Texture" id=10]
[ext_resource path="res://Vail_1.0/Sprites/Environment/Gate.png" type="Texture" id=11]
[ext_resource path="res://Vail_1.0/Prefabs/Fog01.tscn" type="PackedScene" id=12]
[ext_resource path="res://Vail_1.0/Prefabs/Vegetation03.tscn" type="PackedScene" id=13]
[ext_resource path="res://Vail_1.0/Prefabs/Vegetation02.tscn" type="PackedScene" id=14]
[ext_resource path="res://Vail_1.0/Prefabs/Vegetation01.tscn" type="PackedScene" id=15]
[ext_resource path="res://Vail_2.0/Sprites/Environment/Tree01.png" type="Texture" id=16]
[ext_resource path="res://Vail_2.0/Sprites/UI/logo.png" type="Texture" id=17]
[ext_resource path="res://Vail_2.0/Sprites/Environment/Tree03.png" type="Texture" id=18]
[ext_resource path="res://Vail_1.0/Sprites/light.png" type="Texture" id=19]
[ext_resource path="res://Vail_1.0/Sprites/Environment/Vine01.png" type="Texture" id=20]
[ext_resource path="res://Vail_1.0/Audio/The Outer Forest.wav" type="AudioStream" id=21]
[ext_resource path="res://Vail_1.0/Prefabs/Vegetation05.tscn" type="PackedScene" id=22]
[ext_resource path="res://Vail_1.0/Prefabs/Vegetation05_2.tscn" type="PackedScene" id=23]
[ext_resource path="res://Vail_2.0/Fonts/VeilFont-Dynamic60.tres" type="DynamicFont" id=27]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
margin_left = 154.615
margin_top = 540.586
margin_right = 561.615
margin_bottom = 992.586
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu"]
margin_left = 36.5989
margin_top = 26.6384
margin_right = 319.599
margin_bottom = 120.638
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.501961, 0.917647, 1, 1 )
text = "continuar"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Menu"]
margin_left = 34.6619
margin_top = 102.002
margin_right = 322.662
margin_bottom = 196.002
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.501961, 0.917647, 1, 1 )
text = "novo jogo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOpts" parent="Menu" instance=ExtResource( 6 )]
position = Vector2( 35.3906, 188.594 )
scale = Vector2( 0.90427, 0.90427 )

[node name="Credits" type="Button" parent="Menu"]
margin_left = 33.9627
margin_top = 346.919
margin_right = 290.963
margin_bottom = 411.919
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.501961, 0.917647, 1, 1 )
text = "cr√©ditos"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 983.115, 534.062 )
scale = Vector2( 1.14628, 1.15959 )
z_index = -40
texture = ExtResource( 2 )

[node name="GateFrame" type="Sprite" parent="."]
position = Vector2( 1619.39, 313.627 )
rotation = -0.00129618
scale = Vector2( 0.240689, 0.240689 )
texture = ExtResource( 10 )

[node name="Gate" type="Sprite" parent="."]
position = Vector2( 1616.36, 318.761 )
rotation = -1.48341e-05
scale = Vector2( 0.242857, 0.242857 )
texture = ExtResource( 11 )

[node name="Fog01" parent="." instance=ExtResource( 12 )]
position = Vector2( 1743.09, 676.982 )
scale = Vector2( 1.63303, 1.63303 )
z_index = 0

[node name="Vegetation03" parent="." instance=ExtResource( 13 )]
position = Vector2( 1449.57, 1071.94 )
rotation = -0.108255
scale = Vector2( 0.700978, 0.700978 )

[node name="Vegetation02" parent="." instance=ExtResource( 14 )]
position = Vector2( 1517.17, 1031.44 )
rotation = -0.0940589
scale = Vector2( 0.700978, 0.700978 )

[node name="Vegetation01" parent="." instance=ExtResource( 15 )]
position = Vector2( 1014.95, 1032.6 )
rotation = 0.0261211
scale = Vector2( 0.554972, 0.554972 )

[node name="Tree01" type="Sprite" parent="."]
position = Vector2( 1679.61, 477.285 )
scale = Vector2( 0.339368, 0.339368 )
texture = ExtResource( 16 )

[node name="Tree02" type="Sprite" parent="."]
position = Vector2( 889.396, 493.94 )
scale = Vector2( 0.339368, 0.339368 )
texture = ExtResource( 16 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 361.276, 250.128 )
scale = Vector2( 0.2167, 0.2167 )
texture = ExtResource( 17 )

[node name="Tree03" type="Sprite" parent="."]
position = Vector2( 1102.28, 589.192 )
texture = ExtResource( 18 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1563.21, 445.798 )
scale = Vector2( 0.222459, 0.222459 )
texture = ExtResource( 19 )
texture_scale = 1.58
energy = 0.5

[node name="Vine01" type="Sprite" parent="."]
position = Vector2( 635.429, 212.615 )
scale = Vector2( 0.26139, 0.26139 )
texture = ExtResource( 20 )

[node name="MainMenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
autoplay = true

[node name="Vegetation05" parent="." instance=ExtResource( 22 )]
position = Vector2( 774.447, 1066.91 )

[node name="Vegetation06" parent="." instance=ExtResource( 22 )]
position = Vector2( 1805.13, 1067.32 )

[node name="Vegetation07" parent="." instance=ExtResource( 23 )]
position = Vector2( 1642.88, 1067.43 )

[node name="Vegetation08" parent="." instance=ExtResource( 23 )]
position = Vector2( 1608.8, 913.433 )
scale = Vector2( 0.502366, 0.502366 )

[node name="Vegetation09" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.602196 )
position = Vector2( 1541.53, 829.338 )
scale = Vector2( 0.502366, 0.502366 )

[node name="Vegetation10" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.292784 )
position = Vector2( 1423.79, 787.291 )
scale = Vector2( 0.502366, 0.502366 )

[node name="Vegetation11" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.292784 )
position = Vector2( 1344.04, 681.018 )
scale = Vector2( 0.424595, 0.424595 )

[node name="Vegetation13" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.292784 )
position = Vector2( 1760.53, 654.024 )
scale = Vector2( 0.378068, 0.378068 )

[node name="Vegetation12" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.292784 )
position = Vector2( 1403.74, 686.836 )
scale = Vector2( 0.401917, 0.401917 )

[node name="Vegetation14" parent="." instance=ExtResource( 23 )]
modulate = Color( 1, 1, 1, 0.292784 )
position = Vector2( 1818.49, 653.283 )
scale = Vector2( 0.365057, 0.365057 )

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -339.374, -464.344, 1652.79, -457.898, 1661.7, -8.88538, -2.70258, -5.5318, -2.7027, 1034.62, 12.7, 1034.65, 31.7703, 1077.03, 428.009, 1062.19, 480.983, 1043.12, 514.885, 1055.84, 642.021, 1038.89, 737.373, 1002.86, 932.314, 924.465, 1154.8, 837.589, 1315.58, 682.065, 1409.07, 668.075, 1515.02, 680.788, 1714.2, 661.718, 1868.54, 642.098, 1858.28, 504.917, 1822.26, 462.539, 1820.14, 199.792, 1788.36, 131.986, 1733.27, 83.2509, 1682.41, -18.4575, 1665.26, -457.898, 2294.23, -459.68, 2262.36, 1436.7, -321.141, 1454.42 )
[connection signal="button_down" from="Menu/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="Menu/NewGame" to="." method="_on_StartGame_button_down"]
[connection signal="button_down" from="Menu/Credits" to="." method="_on_Credits_button_down"]
